--- a/android/app/src/main/res/layout/activity_my_flowers.xml
+++ b/android/app/src/main/res/layout/activity_my_flowers.xml
@@ -16,7 +16,7 @@
         android:textSize="24sp"
         android:background="@color/mor"
         android:elevation="4dp"
-        android:title="Kayıt Ol"
+        android:title="Çiçeklerim"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
@@ -31,6 +31,7 @@
             android:layout_gravity="center"
             android:textAlignment="center"/>
     </androidx.appcompat.widget.Toolbar>
+
     <!-- RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/flowerRecyclerView"
@@ -39,4 +40,5 @@
         android:layout_margin="16dp"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintBottom_toBottomOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
