--- a/android/app/src/main/res/layout/activity_account_settings.xml
+++ b/android/app/src/main/res/layout/activity_account_settings.xml
@@ -141,6 +141,15 @@
                 android:textSize="20px"
                 android:backgroundTint="@color/turuncu" />
 
+            <Button
+                android:id="@+id/hesabi_sil"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:text="Hesabı Sil"
+                android:textSize="20px"
+                android:backgroundTint="@color/kirmizi" />
+
         </LinearLayout>
     </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
