--- a/android/app/src/main/res/layout/activity_admin_flowers.xml
+++ b/android/app/src/main/res/layout/activity_admin_flowers.xml
@@ -21,6 +21,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent">
+
+        <ImageView
+            android:id="@+id/toolbar_image"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:src="@drawable/flower"
+            android:layout_gravity="start|center_vertical"
+            android:contentDescription="Toolbar Image" />
+
         <TextView
             android:id="@+id/toolbar_title"
             android:layout_width="wrap_content"
