--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -32,33 +32,65 @@
             android:layout_height="match_parent"
             android:padding="16dp">
 
+            <!-- Çiçek Resmini Ortaya Yerleştirme -->
+            <ImageView
+                android:id="@+id/flower_image"
+                android:layout_width="250dp"
+                android:layout_height="250dp"
+                android:src="@drawable/flower"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_bias="0.3" />
+
+            <!-- Yazıyı Çiçeğin Altına Ortalamak -->
+            <TextView
+                android:id="@+id/flower_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="MyFlowers"
+                android:textColor="@android:color/white"
+                android:textSize="50sp"
+                android:textStyle="bold"
+                android:fontFamily="cursive"
+                app:layout_constraintTop_toBottomOf="@id/flower_image"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <!-- Kullanıcı Girişi Butonu -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/user_login"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="120dp"
                 android:backgroundTint="@color/acikpembe"
                 android:text="Kullanıcı Girişi"
-                android:textSize="18sp"
-                app:cornerRadius="16dp"
-                app:layout_constraintBottom_toTopOf="@+id/admin_login"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.491"
+                android:textSize="16sp"
+                app:cornerRadius="8dp"
+                app:layout_constraintTop_toBottomOf="@id/flower_title"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_bias="0.4" /> <!-- Dikeyde ortalama -->
 
+            <!-- Admin Girişi Butonu -->
             <com.google.android.material.button.MaterialButton
                 android:id="@+id/admin_login"
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="100dp"
+                android:layout_marginTop="50dp"
                 android:backgroundTint="@color/acikmor"
                 android:text="Admin Girişi"
-                android:textSize="18sp"
-                app:cornerRadius="16dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
+                android:textSize="16sp"
+                app:cornerRadius="8dp"
+                app:layout_constraintTop_toBottomOf="@id/user_login"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/user_login" />
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintVertical_bias="0.5" /> <!-- Dikeyde ortalama -->
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </FrameLayout>
