--- a/MyFlowers/app/src/main/res/layout/activity_admin_flower_edit.xml
+++ b/MyFlowers/app/src/main/res/layout/activity_admin_flower_edit.xml
@@ -29,19 +29,21 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Çiçek Adı"
-        android:padding="12dp"
+        android:padding="16dp"
+        android:minHeight="48dp"
         android:textColorHint="@color/griRenk01"
         app:layout_constraintTop_toBottomOf="@id/toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="16dp" />
+
 
     <!-- Çiçek Açıklama -->
     <EditText
         android:id="@+id/flowerDescriptionEditText"
         android:layout_width="0dp"
-        android:layout_height="120dp"
+        android:layout_height="300dp"
         android:hint="Çiçek Açıklaması"
         android:padding="12dp"
         android:textColorHint="@color/griRenk01"
@@ -50,7 +52,7 @@
         app:layout_constraintTop_toBottomOf="@id/flowerNameEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="0dp"
         android:layout_marginHorizontal="16dp" />
 
     <!-- Resim Yükle -->
@@ -60,21 +62,21 @@
         android:layout_height="wrap_content"
         android:text="Resim Yükle"
         android:textSize="16sp"
-        android:padding="12dp"
+        android:padding="10dp"
         android:backgroundTint="@color/mavi"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/flowerDescriptionEditText"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
         android:layout_marginHorizontal="16dp" />
 
     <!-- Yüklenen Resim Önizlemesi -->
     <ImageView
         android:id="@+id/flowerImageView"
-        android:layout_width="0dp"
+        android:layout_width="300dp"
         android:layout_height="200dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="0dp"
         android:scaleType="centerCrop"
         android:contentDescription="Seçilen Çiçek Resmi"
         android:background="@drawable/bos_resim"
@@ -90,12 +92,12 @@
         android:layout_height="wrap_content"
         android:text="Güncelle"
         android:textSize="18sp"
-        android:padding="14dp"
+        android:padding="10dp"
         android:backgroundTint="@color/turuncu"
         android:textColor="@android:color/white"
         app:layout_constraintTop_toBottomOf="@id/flowerImageView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="5dp"
         android:layout_marginHorizontal="16dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
